<resources>
    <string name="app_name">Tennis Tournament Helper</string>
    <string name="login">Login</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password (min. 6 characters)</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="doNotHaveAccount">You do not have account? Register</string>
    <string name="register">Registration</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistration">Register</string>
    <string name="deletation_faild">Deletion failed. Try again.</string>
    <string name="missing_players_names">You did not enter players names.</string>
    <string name="check_internet_connection">Check your internet connection. Try refreshing.</string>
    <string name="no_created_tournaments">There is no created tournaments.</string>
    <string name="no_players_for_selected_tournament">No players for selected tournament.</string>

    <string name="no_players_for_selected_tournament_or_lost_connection">No players for selected tournament or there is no internet connection.</string>
    <string name="no_enough_players">There is no enough players for selected game.</string>
    <string name="no_enough_male_players">There is no enough male players for selected game.</string>
    <string name="no_enough_female_players">There is no enough female players for selected game.</string>
    <string name="selected_item_is_probably_deleted">No data for selected item. Match is probably deleted.</string>
    <string name="not_able_to_define_allowed_genders">Not able to define allowed genders.</string>
    <string name="data_does_not_exist">Data does not exist</string>
    <string name="missing_place_of_helding">Missing place of helding</string>
    <string name="game_type_must_be_selected">Game type must be selected</string>
    <string name="setting_tournament_to_finished_failed">Failed to make tournament finished. Try again.</string>
    <string name="send_reset_password_email">Send reset password email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="search_tournament">Search tournament by name...</string>
    <string name="search_match">Search match by players/tournament...</string>
    <string name="display_players">Display players</string>
    <string name="missing_tournament_name">Tournament name is missing.</string>
   <string name="color_pink">#e783e1</string>
    <string name="color_blue">#83cde7</string>
    <string name="color_blue_hard">#1884F8</string>
    <string name="color_green_grass">#77D33F</string>
    <string name="color_orange_clay">#ED7B22</string>
    <string name="dialog_no_data">No data for selected item. It must be deleted."</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="is_match_related_to_existing_tournament">Is match related to existing tournament?</string>
    <string name="confirm_delete">Are you sure you want to delete selected item?</string>
    <string name="missing_email">Email is missing</string>
    <string name="email_not_verified">You did not verify your email. Did not get verification email? Click here to send verification email again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="surface">Surface: </string>
    <string name="hard">Hard</string>
    <string name="grass">Grass</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clay">Clay</string>
    <string name="date">Date:</string>
    <string name="game_type">Game type:</string>
    <string name="number_of_sets">Number of sets:</string>
    <string name="search_players">Search players...</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="tiebreak">Tiebreak:</string>
    <string name="not_allowed">Not allowed</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="allowed_players_gender">Players:</string>
    <string name="enter_player_name">Enter player name</string>
    <string name="enter_result">Enter result</string>
    <string name="winner">Winner:</string>
    <string name="create">CREATE</string>
    <string name="tournament">Tournament:</string>
    <string name="round">Round:</string>
    <string name="first_player_s">First player/s</string>
    <string name="second_player_s">Second player/s</string>
    <string name="player_gender">Player gender:</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="save_player">Save player</string>
    <string name="enter_tournament_name">Enter tournament name</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="male_and_female">Male and female</string>
    <string name="next">Next</string>
    <string name="singles">Singles</string>
    <string name="doubles">Doubles</string>
    <string name="mixed_doubles">MIXED DOUBLES</string>
    <string name="enter_place_of_helding">Enter place of helding</string>
    <string name="check_and_preview_location">Check and preview location</string>
    <string name="finish_and_create_tournament">Finish and create tournament</string>
    <string name="ace">ACE</string>
    <string name="double_fault">DOUBLE FAULT</string>
    <string name="winner_point">WINNER</string>
    <string name="unforced_error">UNFORCED ERROR</string>
    <string name="forced_error">FORCED ERROR</string>
    <string name="loading_details">Loading details</string>
    <string name="name_activity_main">Main Activity</string>
    <string name="confirm_delete_new">Are you sure you want to delete selected item?</string>
    <string name="matches">Matches</string>
    <string name="trail_matches">Trail Matches</string>
    <string name="finished_matches">Finished Matches</string>
    <string name="tournaments">Tournaments</string>
    <string name="current_tournaments">Current Tournaments</string>
    <string name="finished_tournaments">Finished Tournaments</string>
    <string name="set_tournament_finished">Tournament finished</string>
</resources>