<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/et_name_new_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_player_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_gender"
            app:layout_constraintBottom_toBottomOf="@id/rg_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rg_gender" />

    <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/tv_gender"
            app:layout_constraintTop_toBottomOf="@id/et_name_new_player">

        <RadioButton
                android:id="@+id/rb_female_new_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/f" />

        <RadioButton
                android:id="@+id/rb_male_new_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m" />
    </RadioGroup>

    <Button
            android:id="@+id/b_save_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_player"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender" />
</androidx.constraintlayout.widget.ConstraintLayout>