<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/tv_login_text_size"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/guideline_top_login"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_login" />

    <EditText
            android:id="@+id/et_email_login"
            android:layout_marginTop="@dimen/et_email_login_margin_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_login"
            android:hint="@string/hintEmail" />

    <EditText
            android:id="@+id/et_password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_email_login"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_login"
            android:hint="@string/hintPassword"
            android:inputType="textPassword" />

    <TextView
            android:id="@+id/tv_alert_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_password_login"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_login" />

    <TextView
            android:id="@+id/tv_do_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintTop_toBottomOf="@id/tv_alert_login"
            android:text="@string/doNotHaveAccount"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/tv_do_not_have_account_margin_top"
            android:clickable="true"
            android:focusable="true" />

    <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="Forgot password?"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/tv_forgot_password_margin_top"
            app:layout_constraintStart_toStartOf="@id/guideline_left_login"
            app:layout_constraintTop_toBottomOf="@id/tv_do_not_have_account" />

    <Button
            android:id="@+id/b_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toEndOf="@id/guideline_left_login"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_login"
            android:layout_marginTop="@dimen/b_login_margin_top" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>