<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tournaments.new_tournament.NewTournamentPlaceFragment">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_new_tournament_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_new_tournament_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_new_tournament_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

    <EditText
            android:id="@+id/et_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_place_of_helding"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_new_tournament_place"
            app:layout_constraintStart_toStartOf="@id/guideline_left_new_tournament_place"
            app:layout_constraintTop_toTopOf="@id/guideline_top_new_tournament_place" />

    <Button
            android:id="@+id/b_preview_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check_and_preview_location"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_new_tournament_place"
            app:layout_constraintStart_toStartOf="@id/guideline_left_new_tournament_place"
            app:layout_constraintTop_toBottomOf="@id/et_place" />

    <TextView
            android:id="@+id/tv_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_new_tournament_place"
            app:layout_constraintStart_toStartOf="@id/guideline_left_new_tournament_place"
            app:layout_constraintTop_toBottomOf="@id/b_preview_location" />


    <fragment
            android:id="@+id/map_new_tournament_place"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_end_of_map_new_tournament"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_new_tournament_place"
            app:layout_constraintStart_toStartOf="@id/guideline_left_new_tournament_place"
            app:layout_constraintTop_toBottomOf="@id/tv_place" />

    <Button
            android:id="@+id/b_create_tournament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish_and_create_tournament"
            app:layout_constraintEnd_toStartOf="@id/guideline_right_new_tournament_place"
            app:layout_constraintStart_toStartOf="@id/guideline_left_new_tournament_place"
            app:layout_constraintTop_toBottomOf="@id/map_new_tournament_place" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end_of_map_new_tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>
